Update 'yncf-ik5m-python' component image to: quay.io/rhtap_qe/rhtap-qe:3472095942e24c9e6fe5f5cc648a30ac067b67ef@sha256:ef7b2c73eaef2deca3f0cba88636621dc8b51e2b24661fd90e9a37dc63a7e24a

--- a/components/yncf-ik5m-python/overlays/development/deployment-patch.yaml
+++ b/components/yncf-ik5m-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: yncf-ik5m-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:3472095942e24c9e6fe5f5cc648a30ac067b67ef@sha256:ef7b2c73eaef2deca3f0cba88636621dc8b51e2b24661fd90e9a37dc63a7e24a
+          name: container-image
